--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repair Info</title>
 
-    <script type="module" crossorigin src="/repairorganiser/assets/index.c0714e6f.js"></script>
-    <link rel="stylesheet" href="/repairorganiser/assets/index.23f4d05b.css">
+    <script type="module" crossorigin src="/assets/index.d2669739.js"></script>
+    <link rel="stylesheet" href="/assets/index.f7b2b6e0.css">
   </head>
   <body>
     <div id="root"></div>
