--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/ico.ico" />
+    <base href="/repairorganiser/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repair Info</title>
 
