--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repair Info</title>
 
-    <script type="module" crossorigin src="/repairorganiser/assets/index.4ec2e65f.js"></script>
-    <link rel="stylesheet" href="/repairorganiser/assets/index.23f4d05b.css">
+    <script type="module" crossorigin src="/assets/index.bd82d8d0.js"></script>
+    <link rel="stylesheet" href="/assets/index.f7b2b6e0.css">
   </head>
   <body>
     <div id="root"></div>
